# car-service

./: .gitignore  docker-compose.yaml  pyproject.toml
src/: run.py
src/application/: __init__.py  app.py  config.yml  main.py
src/application/controllers/: __init__.py  login.py  opensearch_controller.py
src/application/dataclasses/: jwt_dc.py
src/application/dto/: jwt_dc.py
src/application/enums/: groups.py  record_state.py  roles.py
src/application/events/: event.py
src/application/handlers/: login_handler.py  rag_handler.py
src/application/indexes/: base_index.py  rag_index.py
src/application/lambda/: aws_cognito.py
src/application/models/: __init__.py  base.py  deps.py  engine.py  users_model.py
src/application/schemas/: auth_request_schema.py  auth_response_schemas.py  constranits.py  response_schemas.py  util_schemas.py
src/application/utils/: cognito_service.py  enum_helpers.py  exceptions.py  get_location.py  globals.py  handler_helpers.py  password_utils.py  rag_utils.py  redis_helper.py  s3_service.py  type_decorators.py
src/migration/: README  env.py
src/migration/versions/: 07520a9fb83e_service_model_approved_by_column.py  0e12dbd26761_db_creation.py  11d391e35729_service_model_state_column.py  34b0b8e51d36_description_models.py  4790c333a3b3_engine_model_polymorphic_identity.py  4dc375e84fc0_user_model.py  4dc677da8384_language_model.py  4f9075cb89ae_user_setup_unique_user_id_is_banned_.py  4fdbdeaddc3b_new_model_offer_car_compatibility.py  65bd4ec426d2_car_typee_brands_models.py  68a0a5b326f7_user_setup.py  6b9d8ffc0e26_car_brand_logo_extension.py  78ff8f4f0d7c_first_init.py  803495c725c8_service_model_social_media.py  8542bc18aff1_organization_model_location_column.py  8bda5fb2a72c_engine_model_rename_column.py  91f0d35e22a9_remove_uniqeu_index.py  927d5163c755_organization_model_status_column.py  97270250f438_geometry_field_for_service_location.py  998c8395eead_service_models_extended_address.py  99fd237f4f66_remove_username.py  9d89ac5a52a4_language_model_unique_name.py  a425e5d4c701_timestamp_column_default_value.py  (+10 more)
src/tests/: conftest.py  decorators.py  test_api.py
(+61 files in other folders)
