[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "car-service"
version = "0.0.1"
description = "Car Service"
authors = [
    "HezinTUKE"
]
readme = "README.md"
packages = [
    { include = "application", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
alembic = "^1.16.1"
asyncpg = "^0.30.0"
requests = "^2.32.5"
greenlet = "^3.2.3"
sqlalchemy = "^2.0.44"
psycopg2-binary = "^2.9.10"
dataclasses-json = "^0.6.7"
geopy = "^2.4.1"
pyyaml = "^6.0.3"
fastapi = "^0.121.3"
pydantic = {version = "^2.12.5", extras = ["email"]}
uvicorn = ">=0.34.2,<0.35.0"
python-multipart = "^0.0.20"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["argon2"], version = "^1.7.4"}
redis = "^7.1.0"
opensearch-py = "^3.1.0"
celery = "5.6.2"
aio-pika = "^9.5.8"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.3"
isort = "^5.12.0"
ipykernel = "^6.25.2"
pre-commit = "^4.0.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.ruff]
lint.select = ["E", "F", "C", "W", "R", "B", "Q"]
lint.ignore = ["F401", "F821"]
line-length = 120
target-version="py311"
extend-include = ["*.ipynb"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "venv",
    ".venv",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
pythonpath = ["src"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.setuptools.packages.find]
where = ["."]
include = ["application", "tests"]
exclude = []
namespaces = false

[tool.poetry.scripts]
start = "run:main"
